[gd_scene load_steps=6 format=2]

[ext_resource path="res://Calligraserif.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.152941, 0.113725, 0.305882, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 512.0
margin_bottom = 288.0
custom_constants/margin_right = 0
custom_constants/margin_left = -6
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = -6.0
margin_right = 512.0
margin_bottom = 258.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 518.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Title Here"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 518.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 174.0
margin_right = 344.0
margin_bottom = 42.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 170.0
margin_bottom = 42.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_hover = Color( 0.823529, 0.482353, 0.0196078, 1 )
custom_colors/font_color_pressed = Color( 0.717647, 0.0352941, 0.0352941, 1 )
custom_fonts/font = SubResource( 2 )
text = "New Game"
flat = true

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 200.0
margin_top = 42.0
margin_right = 318.0
margin_bottom = 84.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_right = 118.0
margin_bottom = 42.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_hover = Color( 0.823529, 0.482353, 0.0196078, 1 )
custom_colors/font_color_pressed = Color( 0.717647, 0.0352941, 0.0352941, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
text = "Options"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 216.0
margin_top = 84.0
margin_right = 301.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Close" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_right = 85.0
margin_bottom = 42.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_hover = Color( 0.823529, 0.482353, 0.0196078, 1 )
custom_colors/font_color_pressed = Color( 0.717647, 0.0352941, 0.0352941, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
text = "Close"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/NewGame" to="." method="newGamePressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Options" to="." method="optionsPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Close" to="." method="closePressed"]
